log
Wed 20 Mar 2024 08:38:27 PM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|0
d23eeac
Wed 20 Mar 2024 08:40:39 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
c22af01
Wed 20 Mar 2024 08:41:14 PM UTC: 
 exercises.c | 9 ---------
 1 file changed, 9 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
0afb2c2
Wed 20 Mar 2024 08:41:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
c85a876
Wed 20 Mar 2024 08:43:07 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
1169553
Wed 20 Mar 2024 08:43:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
2c9390e
Wed 20 Mar 2024 08:47:53 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ea4d833
Wed 20 Mar 2024 09:02:00 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:101:12: error: expected expression before ‘=’ token
  101 |   while(P1)=NULL){
      |            ^
exercises.c:101:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
  101 |   while(P1)=NULL){
      |   ^~~~~
exercises.c:101:17: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
  101 |   while(P1)=NULL){
      |                 ^
exercises.c:101:17: error: expected statement before ‘)’ token
exercises.c:104:14: error: expected expression before ‘=’ token
  104 |   while(dato)=NULL){
      |              ^
exercises.c:104:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
  104 |   while(dato)=NULL){
      |   ^~~~~
exercises.c:104:19: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
  104 |   while(dato)=NULL){
      |                   ^
exercises.c:104:19: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
5b8dfd3
